# Advanced_Programming_Project

./: .gitignore  AnomalyDetector.h  CLI.cpp  CLI.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  MainTest.cpp  MainTest.h  MainTrain.cpp  Server.cpp  Server.h  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  anomaly_detection_util.h  commands.h  minCircle.cpp  testFile.csv  timeseries.cpp  timeseries.h
temp/: AnomalyDetector.cpp  MainTest.cpp  MainTest.h
